--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -2114,7 +2114,7 @@ legend {
   line-height: 1.42857;
 }
 .navbar, .navbar.navbar-default {
-  background-color: #9c27b0;
+  background-color:#999999;
   color: #ffffff;
 }
 .navbar .navbar-form .form-group input.form-control::-moz-placeholder,
